Dev: fix question-container.row align offset (#913)
Dev: fix question-container.row align offest
Dev: add ajax loader

--- a/themes/survey/vanilla/css/theme.css
+++ b/themes/survey/vanilla/css/theme.css
@@ -124,6 +124,10 @@ body {
   margin-bottom: 2em ;
   padding-bottom: 2em ;
 }
+.question-container.row {
+    margin-right: 0;
+    margin-left: 0;
+}
 
 .question-title-container {
   padding-top: 1em;
